# my-heap-alloc

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  massif.out.1069023
include/: bitmap.h  falloc.h  fixed_alloc.h  os_allocator.h  rtree.h  slab_alloc.h
include/fallback_alloc/: fallback_alloc.h  fallback_chunk.h  fallback_region.h
scripts/: cmake-release.sh  tidy.sh
src/: bitmap.c  chunk.h  error.c  error.h  fallback_alloc.c  falloc.c  falloc.h  fixed_alloc.c  fixed_alloc.h  heap_alloc.c  heap_alloc.h  heap_alloc_test.c  os_allocator.h  rtree.c  rtree.h  slab_alloc.c  slab_alloc.h  stack_definition.h
src/fallback_allocator/: fallback_allocator.c  fallback_allocator.h  fallback_chunk.h  fallback_region.h
src/fast_allocator/: bitmap.c  bitmap.h  block_allocator.c  block_allocator.h  cache.h  fast_alloc.c  fast_alloc.h  fast_alloc_global_wrapper.c  fast_alloc_global_wrapper.h  fast_allocator.c  fast_allocator.h  fast_allocator_global_wrapper.c  fast_allocator_global_wrapper.h  fixed_alloc.c  fixed_alloc.h  rtree.c  rtree.h  stack_declaration.h  stack_definition.h
test/: benchmark_small_allocs.c  big_allocs_test.c  fallback_alloc_new_region_test.c  fallback_alloc_print_layout.h  fallback_alloc_test.c  fallback_allocator_print_memory_layout.h  falloc_test.c  fast_alloc_big_allocations_test.c  fast_alloc_global_wrapper_test.c  fast_alloc_multi_threaded_test.c  fast_alloc_print_layout.h  fast_alloc_test.c  fixed_alloc_test.c  heap_alloc_test.c  multi_threaded_test.c  new_region_test.c  rtree_print.h  rtree_test.c  slab_alloc_print_layout.h  slab_alloc_test.c  test.h
